final_nlab/grammar
# This grammar adds my extension part

<PROG> ::= "BEGIN" "{" <INSTRCLIST>

<INSTRCLIST> ::= "}" | <INSTRC> <INSTRCLIST>
<INSTRC> ::= <PRINT> | <SET> | <CREATE> | <LOOP> | <SAVE>

# Print array or one-word string to stdout
<PRINT> ::= "PRINT" <VARNAME> | "PRINT" <STRING>

# One of the 26 possible (upper-case) variables
<VARNAME> ::= "$"[A-Z]     # e.g. $A, $B, $Z etc.

# Because of the assumption that a program is just a list of words, strings can't have spaces in them (for simplicity)
<STRING> :: Double-quoted string e.g. "../../doof.arr", "Hello!" etc.

<SET> ::= "SET" <VARNAME> ":=" <POLISHLIST>
<POLISHLIST> ::= <POLISH><POLISHLIST>  | ";"

<POLISH> ::= <PUSHDOWN> | <UNARYOP> | <BINARYOP>
<PUSHDOWN> ::== <VARNAME> | <INTEGER>

# A non-negative integer
<INTEGER> ::= [0-9]+    # e.g. 1, 250,  3

# Pop one array, push the result.
# U-NOT : Flip the Boolean values of an array     
# U-EIGHTCOUNT : Returns the numbers of true values around each cell in the array in its  
# Moore 8-neighbourhood (north, south, west, east, NE, NW, SW, SE).
<UNARYOP> ::= "U-NOT" | "U-EIGHTCOUNT"

# Pop 2 arrays, push the resultant array
# If both arrays are bigger than 1x1, they must be the same size
# If one array is a 1x1 scalar, apply this value to each cell of the other array in turn
# B-TIMES operates on corresponding cells in turn (it is not a full matrix multiplication).

# B-MUL: Matrix multiplication for two matrices (the same number of row and column,  cannot be 1 * 1 matrix)
<BINARYOP> :: "B-AND" | "B-OR" | "B-GREATER" | "B-LESS" | "B-ADD" | "B-TIMES" | "B-EQUALS" | "B-SUB" | "B-MUL"

# Create an array full of ones, or read from a file
<CREATE> ::= "ONES" <ROWS> <COLS> <VARNAME> | "READ" <FILENAME> <VARNAME>
<ROWS> ::= <INTEGER>
<COLS> ::= <INTEGER>
<FILENAME> ::= <STRING>

# Loop using a variable to count from 1 (!) to <= <INTEGER>
# IF the variable
<LOOP> ::= "LOOP" <VARNAME> <INTEGER> "{" <INSTRCLIST>

# Creat a new file, and save variable value, interger or string in it.
<SAVE> ::= "SAVE" <FILENAME> <TYPE> 
<TYPE> ::== <VARNAME> | <INTEGER> | <STRING>
